Rename PAGE_SIZE to ENGINE_PAGE_SIZE to avoid a clash

Fixes the build with musl libc because it clashes with PAGE_SIZE
from limits.h, which according to POSIX [1] should be in there.
Fails with "KNSBackend.cpp:39:18: error: expected unqualified-id
before numeric constant
   39 | static const int PAGE_SIZE = 100;" otherwise.

BUG: 448378
FIXED-IN: 5.24.0

[1] https://pubs.opengroup.org/onlinepubs/009696899/basedefs/limits.h.html